# Dango-template

./: .gitignore  pyproject.toml
app/: models.py  urls.py  views.py
app/templates/app/: start.html
project/: settings.py  urls.py
