[tool.poetry]
name = "asomeruka"
version = "0.1.0"
description = ""
authors = ["Dan"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
Pillow = "^9.0.0"
django-widget-tweaks = "^1.4.12"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
django-environ = "^0.8.1"
django-jazzmin = "^2.4.9"

[tool.poetry.scripts]
manage = "manage:main"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
